# SMART-Resume-Analyzer

./: .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  README-DEPLOYMENT.md  README.md  RENDER-DEPLOYMENT.md  RESTRUCTURING-SUMMARY.md  ai_check.html  ai_detector.py  app.py  docker-compose.yml  email_service.py  extensions.py  main.py  models.py  pyproject.toml  requirements.txt  results.html  resume_analyzer.db  resume_analyzer.py  style.css  vercel.json
.github/workflows/: deploy.yml
api/: index.py
smart-hire-main (2)/smart-hire-main/smart-hire-main/: DEPLOYMENT.md  Dockerfile  ai_detector.py  docker-compose.yml  requirements.txt  resume_analyzer.db  resume_analyzer.py  vercel.json
smart-hire-main (2)/smart-hire-main/smart-hire-main/api/: index.py
smart-hire-main (2)/smart-hire-main/smart-hire-main/static/css/: style.css
smart-hire-main (2)/smart-hire-main/smart-hire-main/static/js/: main.js
smart-hire-main (2)/smart-hire-main/smart-hire-main/templates/: results.html
static/js/: main.js
templates/: 404.html  500.html  ai_check.html  base.html  homepage.html  index.html  results.html
